updated with imdb and wiki images paths

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {
     "id": "NIq4VpSv7Kaz"
    },
@@ -20,22 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {
     "id": "C_fj5C3Z0rNv"
    },
    "outputs": [],
    "source": [
     "# loading the wiki.mat file from drive to process it\n",
-    "data = io.loadmat(\"wiki_crop/wiki.mat\")\n",
+    "data = io.loadmat(\"data/wiki_crop/wiki.mat\")\n",
     "\n",
     "# loading the imdb.mat file from drive to process it, we take some female images from imdb as wiki do not have equal amount of male and female images \n",
-    "data1 = io.loadmat(\"imdb_crop/imdb.mat\")"
+    "data1 = io.loadmat(\"data/imdb_crop/imdb.mat\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {
     "id": "50oizfKA3X4K"
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {
     "id": "cP2azklmjl90"
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {
     "id": "s8miBesWFJwF"
    },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {
     "id": "cvYcA1mFV9sw"
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {
     "id": "As005e7_mmGo"
    },
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {
     "id": "PxwLAtWnHpoM"
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {
     "id": "dT7m0N47FkkN"
    },
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {
     "id": "C-kh7_lnU8Xt"
    },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "metadata": {
     "id": "H8STTwD7FmMZ"
    },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "metadata": {
     "id": "Y5cPf4bAm1mx"
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -512,7 +512,7 @@
        "6  4.1848283121533445         nan   33  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "12  4.0964305784174595         nan   49  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "metadata": {
     "id": "qZ7gyllLVfLz"
    },
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -668,7 +668,7 @@
        "<AxesSubplot:xlabel='gender', ylabel='count'>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
        "<AxesSubplot:xlabel='gender', ylabel='count'>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -740,7 +740,7 @@
        "<AxesSubplot:xlabel='age', ylabel='count'>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
        "<AxesSubplot:xlabel='age', ylabel='count'>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
        "29455"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
        "363828     0.0   70/nm0261170_rm4153904896_1973-4-11_2010.jpg   36"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"img_path\"] = data[\"img_path\"].apply(lambda x: x.replace(x,\"wiki_crop/\" + x)) #adding the wiki folder name to image path\n",
+    "\n",
+    "temp_df[\"img_path\"] = temp_df[\"img_path\"].apply(lambda x: x.replace(x,\"imdb_crop/\" + x)) # adding the imdb folder name to image path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>img_path</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>285971</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>imdb_crop/05/nm2439805_rm3206721792_1977-11-2_...</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>370393</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>imdb_crop/68/nm2362068_rm2370358016_1986-12-30...</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191648</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>imdb_crop/72/nm0305272_rm3695872512_1979-8-10_...</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297441</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>imdb_crop/54/nm0932454_rm2672331264_1988-8-16_...</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363828</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>imdb_crop/70/nm0261170_rm4153904896_1973-4-11_...</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        gender                                           img_path  age\n",
+       "285971     0.0  imdb_crop/05/nm2439805_rm3206721792_1977-11-2_...   31\n",
+       "370393     0.0  imdb_crop/68/nm2362068_rm2370358016_1986-12-30...   25\n",
+       "191648     0.0  imdb_crop/72/nm0305272_rm3695872512_1979-8-10_...   29\n",
+       "297441     0.0  imdb_crop/54/nm0932454_rm2672331264_1988-8-16_...   20\n",
+       "363828     0.0  imdb_crop/70/nm0261170_rm4153904896_1973-4-11_...   36"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +1026,7 @@
        "39455"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 46,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -957,7 +1052,7 @@
        "<AxesSubplot:xlabel='gender', ylabel='count'>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -981,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +1085,7 @@
        "<AxesSubplot:xlabel='age', ylabel='count'>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1013,24 +1108,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 48,
    "metadata": {
     "id": "6sxU59aaYTZd"
    },
    "outputs": [],
    "source": [
     "# save this file so that, this can be used for building the model \n",
-    "dataset.to_csv('dataset.csv',index=False)"
+    "dataset.to_csv('data/dataset.csv',index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "29gLjy0JC7No"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
