--- a/AgeGender.ipynb
+++ b/AgeGender.ipynb
@@ -32,7 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install cvlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -41,6 +50,7 @@
    "outputs": [],
    "source": [
     "import cv2\n",
+    "import cvlib as cv\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -62,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -86,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -97,15 +107,18 @@
     "def detect_face_image(img):\n",
     "    label_dict={0:'Female',1:'Male'}\n",
     "    color_dict={0:(0,255,0),1:(0,0,255)}\n",
-    "    \n",
-    "    face_coord = face_cascade.detectMultiScale(img,scaleFactor = 1.2,minNeighbors = 5)  # This gives us the coordinates of rectangle drawn across the face \n",
-    "    for x,y,w,h in face_coord:\n",
-    "        image = img[y:y+h,x:x+h]\n",
+    "    faces, confidences = cv.detect_face(img) \n",
+    "#     face_coord = face_cascade.detectMultiScale(img,scaleFactor = 1.2,minNeighbors = 5)  # This gives us the coordinates of rectangle drawn across the face \n",
+    "#     for x,y,w,h in face_coord:\n",
+    "    for index,face in enumerate(faces):\n",
+    "        x1,y1 = face[0],face[1]\n",
+    "        x2,y2 = face[2],face[3]\n",
+    "        image = img[y1:y2,x1:x2]\n",
     "        image_gry = cv2.cvtColor(image,cv2.COLOR_BGR2GRAY)\n",
     "        resize_img = cv2.resize(image_gry,(200,200))\n",
     "        norm_img = resize_img/255.0\n",
     "        reshaped=np.reshape(norm_img,(1,200,200,1))\n",
-    "        #reshaped = np.vstack([reshaped])\n",
+    "        reshaped = np.vstack([reshaped])\n",
     "\n",
     "        try:  \n",
     "            with tf.device('/device:GPU:5'):\n",
@@ -117,21 +130,36 @@
     "        else:\n",
     "            label=1\n",
     "     \n",
-    "        cv2.rectangle(img,(x,y),(x+w,y+h),color_dict[label],thickness = 5)\n",
-    "        cv2.rectangle(img,(x,y-40),(x+w,y),color_dict[label],-1)\n",
-    "        cv2.putText(img, label_dict[label], (x, y-40),cv2.FONT_HERSHEY_SIMPLEX,5,(255,255,255),5)\n",
+    "        cv2.rectangle(img,(x1,y1),(x2,y2),color_dict[label],thickness = 5)\n",
+    "        cv2.rectangle(img,(x2,y2),(x2,y2),color_dict[label],-1)\n",
+    "        cv2.putText(img, label_dict[label], (x1, y1-40),cv2.FONT_HERSHEY_SIMPLEX,5,(255,255,255),5)\n",
     "    return img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# image = cv2.imread(\"IMG_2137.JPG\")\n",
-    "# out_image = detect_face_image(image)\n",
-    "# plt.imshow(out_image)"
+    "# faces, confidences = cv.detect_face(image) \n",
+    "# for index,face in enumerate(faces):\n",
+    "#     x1,y1 = face[0],face[1]\n",
+    "#     x2,y2 = face[2],face[3]\n",
+    "#     cv2.rectangle(image,(x1,y1),(x2,y2),2)\n",
+    "# plt.imshow(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = cv2.imread(\"IMG_2137.JPG\")\n",
+    "out_image = detect_face_image(image)\n",
+    "plt.imshow(out_image)"
    ]
   },
   {
@@ -168,10 +196,13 @@
     "def detect_face_video(img):\n",
     "    label_dict={0:'Female',1:'Male'}\n",
     "    color_dict={0:(0,255,0),1:(0,0,255)}\n",
-    "    \n",
-    "    face_coord = face_cascade.detectMultiScale(img,scaleFactor = 1.2,minNeighbors = 5)  # This gives us the coordinates of rectangle drawn across the face \n",
-    "    for x,y,w,h in face_coord:\n",
-    "        image = img[y:y+h,x:x+h]\n",
+    "    faces, confidences = cv.detect_face(img) \n",
+    "#     face_coord = face_cascade.detectMultiScale(img,scaleFactor = 1.2,minNeighbors = 5)  # This gives us the coordinates of rectangle drawn across the face \n",
+    "#     for x,y,w,h in face_coord:\n",
+    "    for index,face in enumerate(faces):\n",
+    "        x1,y1 = face[0],face[1]\n",
+    "        x2,y2 = face[2],face[3]\n",
+    "        image = img[y1:y2,x1:x2]\n",
     "        image_gry = cv2.cvtColor(image,cv2.COLOR_BGR2GRAY)\n",
     "        resize_img = cv2.resize(image_gry,(200,200))\n",
     "        norm_img = resize_img/255.0\n",
@@ -188,8 +219,8 @@
     "        else:\n",
     "            label=1\n",
     "     \n",
-    "        cv2.rectangle(img,(x,y),(x+w,y+h),color_dict[label],thickness = 5)\n",
-    "        cv2.rectangle(img,(x,y-40),(x+w,y),color_dict[label],-1)\n",
+    "        cv2.rectangle(img,(x1,y1),(x2,y2),color_dict[label],thickness = 5)\n",
+    "        cv2.rectangle(img,(x1,y1),(x2,y2),color_dict[label],-1)\n",
     "        cv2.putText(img, label_dict[label], (x, y-10),cv2.FONT_HERSHEY_SIMPLEX,0.8,(255,255,255),2)\n",
     "    return img"
    ]
