--- a/AgeGender.ipynb
+++ b/AgeGender.ipynb
@@ -21,27 +21,52 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "PBe-4781Q0UB"
-   },
-   "source": [
-    "###Imports"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pip install cvlib"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: cvlib in c:\\users\\vemul\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (0.2.5)"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 20.2.4; however, version 20.3.1 is available.\n",
+      "You should consider upgrading via the 'c:\\users\\vemul\\appdata\\local\\programs\\python\\python36\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Requirement already satisfied: progressbar in c:\\users\\vemul\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from cvlib) (2.5)\n",
+      "Requirement already satisfied: numpy in c:\\users\\vemul\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from cvlib) (1.18.5)\n",
+      "Requirement already satisfied: pillow in c:\\users\\vemul\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from cvlib) (8.0.0)\n",
+      "Requirement already satisfied: imageio in c:\\users\\vemul\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from cvlib) (2.9.0)\n",
+      "Requirement already satisfied: imutils in c:\\users\\vemul\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from cvlib) (0.5.3)\n",
+      "Requirement already satisfied: requests in c:\\users\\vemul\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from cvlib) (2.24.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\vemul\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from requests->cvlib) (2020.6.20)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\vemul\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from requests->cvlib) (2.10)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\vemul\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from requests->cvlib) (3.0.4)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\vemul\\appdata\\local\\programs\\python\\python36\\lib\\site-packages (from requests->cvlib) (1.25.10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!pip install cvlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -50,10 +75,10 @@
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import cvlib as cv\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
+    "import cvlib as cv\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import load_model\n",
     "# from google.colab import  files\n",
@@ -67,17 +92,13 @@
     "id": "42nhVGJSUP0P"
    },
    "source": [
-    "####Using OpenCV haar cascade classifiers for face detection "
+    "#### Using OpenCV detect face for face detection "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "LmNcALLkROT9"
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "face_cascade = cv2.CascadeClassifier('haarcascade_frontalface_default.xml')"
@@ -87,109 +108,26 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "d0xS_sn8Uqtf"
-   },
-   "source": [
-    "####Detecting and drawing shapes across the face\n",
-    "* Face is detected across each frame if video input is given"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "yyZo8ZUgRShx"
-   },
-   "outputs": [],
-   "source": [
-    "def detect_face_image(img):\n",
-    "    label_dict={0:'Female',1:'Male'}\n",
-    "    color_dict={0:(0,255,0),1:(0,0,255)}\n",
-    "    faces, confidences = cv.detect_face(img) \n",
-    "#     face_coord = face_cascade.detectMultiScale(img,scaleFactor = 1.2,minNeighbors = 5)  # This gives us the coordinates of rectangle drawn across the face \n",
-    "#     for x,y,w,h in face_coord:\n",
-    "    for index,face in enumerate(faces):\n",
-    "        x1,y1 = face[0],face[1]\n",
-    "        x2,y2 = face[2],face[3]\n",
-    "        image = img[y1:y2,x1:x2]\n",
-    "        image_gry = cv2.cvtColor(image,cv2.COLOR_BGR2GRAY)\n",
-    "        resize_img = cv2.resize(image_gry,(200,200))\n",
-    "        norm_img = resize_img/255.0\n",
-    "        reshaped=np.reshape(norm_img,(1,200,200,1))\n",
-    "        reshaped = np.vstack([reshaped])\n",
-    "\n",
-    "        try:  \n",
-    "            with tf.device('/device:GPU:5'):\n",
-    "                gender_res = gen_model.predict(reshaped)\n",
-    "        except RuntimeError as e:\n",
-    "            print(e)\n",
-    "        if(gender_res[0][0]<0.5):\n",
-    "            label=0\n",
-    "        else:\n",
-    "            label=1\n",
-    "     \n",
-    "        cv2.rectangle(img,(x1,y1),(x2,y2),color_dict[label],thickness = 5)\n",
-    "        cv2.rectangle(img,(x2,y2),(x2,y2),color_dict[label],-1)\n",
-    "        cv2.putText(img, label_dict[label], (x1, y1-40),cv2.FONT_HERSHEY_SIMPLEX,5,(255,255,255),5)\n",
-    "    return img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# image = cv2.imread(\"IMG_2137.JPG\")\n",
-    "# faces, confidences = cv.detect_face(image) \n",
-    "# for index,face in enumerate(faces):\n",
-    "#     x1,y1 = face[0],face[1]\n",
-    "#     x2,y2 = face[2],face[3]\n",
-    "#     cv2.rectangle(image,(x1,y1),(x2,y2),2)\n",
-    "# plt.imshow(image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = cv2.imread(\"IMG_2137.JPG\")\n",
-    "out_image = detect_face_image(image)\n",
-    "plt.imshow(out_image)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
     "id": "Tk8gMT1RX8Fv"
    },
    "source": [
-    "####Video Input\n",
+    "#### Video Input\n",
     "* If existing video file is to be used then file path is given\n",
     "* If live web cam is used just enter 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "6aVohCYPX6Nw"
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "video = cv2.VideoCapture('test3.mp4')  # Sincle colab has no option for live recording, existing file is used"
+    "gen_model = load_model(\"models/new_model.h5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,14 +158,90 @@
     "            label=1\n",
     "     \n",
     "        cv2.rectangle(img,(x1,y1),(x2,y2),color_dict[label],thickness = 5)\n",
-    "        cv2.rectangle(img,(x1,y1),(x2,y2),color_dict[label],-1)\n",
-    "        cv2.putText(img, label_dict[label], (x, y-10),cv2.FONT_HERSHEY_SIMPLEX,0.8,(255,255,255),2)\n",
+    "#         cv2.rectangle(img,(x1,y1),(x2,y2),color_dict[label],)\n",
+    "        cv2.putText(img, label_dict[label], (x1, y1-10),cv2.FONT_HERSHEY_SIMPLEX,0.8,(255,255,255),2)\n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def detect_face_image(img):\n",
+    "    label_dict={0:'Female',1:'Male'}\n",
+    "    color_dict={0:(0,255,0),1:(0,0,255)}\n",
+    "    faces, confidences = cv.detect_face(img) \n",
+    "#     face_coord = face_cascade.detectMultiScale(img,scaleFactor = 1.2,minNeighbors = 5)  # This gives us the coordinates of rectangle drawn across the face \n",
+    "#     for x,y,w,h in face_coord:\n",
+    "    for index,face in enumerate(faces):\n",
+    "        x1,y1 = face[0],face[1]\n",
+    "        x2,y2 = face[2],face[3]\n",
+    "        image = img[y1:y2,x1:x2]\n",
+    "        image_gry = cv2.cvtColor(image,cv2.COLOR_BGR2GRAY)\n",
+    "        resize_img = cv2.resize(image_gry,(200,200))\n",
+    "        norm_img = resize_img/255.0\n",
+    "        reshaped=np.reshape(norm_img,(1,200,200,1))\n",
+    "        #reshaped = np.vstack([reshaped])\n",
+    "\n",
+    "        try:  \n",
+    "            with tf.device('/device:GPU:5'):\n",
+    "                gender_res = gen_model.predict(reshaped)\n",
+    "        except RuntimeError as e:\n",
+    "            print(e)\n",
+    "        if(gender_res[0][0]<0.5):\n",
+    "            label=0\n",
+    "        else:\n",
+    "            label=1\n",
+    "     \n",
+    "        cv2.rectangle(img,(x1,y1),(x2,y2),color_dict[label],thickness = 5)\n",
+    "#         cv2.rectangle(img,(x1,y1),(x2,y2),color_dict[label],)\n",
+    "        cv2.putText(img, label_dict[label], (x1, y1-10),cv2.FONT_HERSHEY_SIMPLEX,0.8,(255,255,255),2)\n",
     "    return img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = cv2.imread(\"temp1.JPG\")\n",
+    "out_image = detect_face_image(image)\n",
+    "plt.imshow(out_image)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For Existing video"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "6aVohCYPX6Nw"
+   },
+   "outputs": [],
+   "source": [
+    "video = cv2.VideoCapture('vid1.mp4')  # Sincle colab has no option for live recording, existing file is used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -252,20 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:  \n",
-    "    with tf.device('/device:GPU:5'):\n",
-    "        gen_model = load_model(\"models/cnn1_relu_sgd_84acc_80tr_20te_less_false_neg\")\n",
-    "except RuntimeError as e:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -277,11 +278,11 @@
     "  print('Error! File Not found')\n",
     "while video.isOpened():\n",
     "    ret,frame = video.read()\n",
-    "    frame = detect_face_video(frame)  #detect the face for each frame displayed on video\n",
     "    if ret == True:\n",
+    "        frame = detect_face_video(frame)  #detect the face for each frame displayed on video\n",
     "        out.write(frame)\n",
-    "#     if cv2.waitKey(27) & 0xFF == ord('q'): #if live webcam is given input then video can be quit using letter 'q'\n",
-    "#         break\n",
+    "    if cv2.waitKey(27) & 0xFF == ord('q'): #if live webcam is given input then video can be quit using letter 'q'\n",
+    "        break\n",
     "    else:\n",
     "        break\n",
     "video.release()\n",
@@ -290,15 +291,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For live Webcam Video"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "vwVn-IerbZH3"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "webcam = cv2.VideoCapture(0)\n",
+    "while True:\n",
+    "    ret,frame = webcam.read()\n",
+    "    frame = detect_face_video(frame)  #detect the face for each frame displayed on video\n",
+    "    cv2.imshow(\"gender detection\", frame)\n",
+    "    k = cv2.waitKey(30) & 0xff\n",
+    "    if k==27:\n",
+    "        break\n",
+    "webcam.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
@@ -324,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
