--- a/AgeGender.ipynb
+++ b/AgeGender.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -92,7 +92,7 @@
     "id": "42nhVGJSUP0P"
    },
    "source": [
-    "#### Using OpenCV detect face for face detection "
+    "#### Load the required models"
    ]
   },
   {
@@ -101,7 +101,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "face_cascade = cv2.CascadeClassifier('haarcascade_frontalface_default.xml')"
+    "gen_model = load_model(\"models/batch_norm_rms_93acc_50epo\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For Existing video"
    ]
   },
   {
@@ -118,15 +125,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gen_model = load_model(\"models/new_model.h5\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -134,13 +132,12 @@
     "def detect_face_video(img):\n",
     "    label_dict={0:'Female',1:'Male'}\n",
     "    color_dict={0:(0,255,0),1:(0,0,255)}\n",
+    "    #Using OpenCV detect face for face detection available in cvlib library\n",
     "    faces, confidences = cv.detect_face(img) \n",
-    "#     face_coord = face_cascade.detectMultiScale(img,scaleFactor = 1.2,minNeighbors = 5)  # This gives us the coordinates of rectangle drawn across the face \n",
-    "#     for x,y,w,h in face_coord:\n",
     "    for index,face in enumerate(faces):\n",
     "        x1,y1 = face[0],face[1]\n",
     "        x2,y2 = face[2],face[3]\n",
-    "        image = img[y1:y2,x1:x2]\n",
+    "        image = img[y1-15:y2+15,x1-15:x2+15]\n",
     "        image_gry = cv2.cvtColor(image,cv2.COLOR_BGR2GRAY)\n",
     "        resize_img = cv2.resize(image_gry,(200,200))\n",
     "        norm_img = resize_img/255.0\n",
@@ -159,8 +156,72 @@
     "     \n",
     "        cv2.rectangle(img,(x1,y1),(x2,y2),color_dict[label],thickness = 5)\n",
     "#         cv2.rectangle(img,(x1,y1),(x2,y2),color_dict[label],)\n",
-    "        cv2.putText(img, label_dict[label], (x1, y1-10),cv2.FONT_HERSHEY_SIMPLEX,0.8,(255,255,255),2)\n",
+    "        cv2.putText(img, label_dict[label], (x1, y1-15),cv2.FONT_HERSHEY_SIMPLEX,2,(255,255,255),5)\n",
     "    return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "6aVohCYPX6Nw"
+   },
+   "outputs": [],
+   "source": [
+    "video = cv2.VideoCapture('test1.mp4')  # Sincle colab has no option for live recording, existing file is used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "Ohs7zYxbK621"
+   },
+   "outputs": [],
+   "source": [
+    "width = int(video.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "height = int(video.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "out = cv2.VideoWriter('test5_out.mp4',cv2.VideoWriter_fourcc(*'XVID'),25,(width,height))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "dFzeit-Hb6U0"
+   },
+   "source": [
+    "* colab gives the output of video files as a series of each frame present in video file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "xM-vCzDiZoT_"
+   },
+   "outputs": [],
+   "source": [
+    "if video.isOpened() == False:\n",
+    "  print('Error! File Not found')\n",
+    "while video.isOpened():\n",
+    "    ret,frame = video.read()\n",
+    "    if ret == True:\n",
+    "        frame = detect_face_video(frame)  #detect the face for each frame displayed on video\n",
+    "        out.write(frame)\n",
+    "    if cv2.waitKey(27) & 0xFF == ord('q'): #if live webcam is given input then video can be quit using letter 'q'\n",
+    "        break\n",
+    "    else:\n",
+    "        break\n",
+    "video.release()\n",
+    "out.release()\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
@@ -223,77 +284,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## For Existing video"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "6aVohCYPX6Nw"
-   },
-   "outputs": [],
-   "source": [
-    "video = cv2.VideoCapture('vid1.mp4')  # Sincle colab has no option for live recording, existing file is used"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "Ohs7zYxbK621"
-   },
-   "outputs": [],
-   "source": [
-    "width = int(video.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
-    "height = int(video.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
-    "out = cv2.VideoWriter('test3_out.mp4',cv2.VideoWriter_fourcc(*'XVID'),25,(width,height))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "dFzeit-Hb6U0"
-   },
-   "source": [
-    "* colab gives the output of video files as a series of each frame present in video file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "xM-vCzDiZoT_"
-   },
-   "outputs": [],
-   "source": [
-    "if video.isOpened() == False:\n",
-    "  print('Error! File Not found')\n",
-    "while video.isOpened():\n",
-    "    ret,frame = video.read()\n",
-    "    if ret == True:\n",
-    "        frame = detect_face_video(frame)  #detect the face for each frame displayed on video\n",
-    "        out.write(frame)\n",
-    "    if cv2.waitKey(27) & 0xFF == ord('q'): #if live webcam is given input then video can be quit using letter 'q'\n",
-    "        break\n",
-    "    else:\n",
-    "        break\n",
-    "video.release()\n",
-    "out.release()\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## For live Webcam Video"
    ]
   },
@@ -343,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
