--- a/AgeGender_Testing.ipynb
+++ b/AgeGender_Testing.ipynb
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_model = load_model(\"models/batch_norm_rms_97.5acc_50epo\")\n",
+    "gen_model = load_model(\"models/batch_norm_rms_97.5acc_50epo\") # loading the gender model\n",
     "age_model = load_model(\"models/agemodel_CNN2.h5\")"
    ]
   },
@@ -131,18 +131,18 @@
    "outputs": [],
    "source": [
     "def detect_face_video(img):\n",
-    "    label_dict={0:'Female',1:'Male'}\n",
-    "    color_dict={0:(0,255,0),1:(0,0,255)}\n",
-    "    age_dict ={0: '10-22', 1:'23-26', 2:'27-31', 3:'32-39', 4:'40-51', 5:'52-99'}\n",
+    "    label_dict={0:'Female',1:'Male'} # assigning 0 with female & 1 with Male\n",
+    "    color_dict={0:(0,255,0),1:(0,0,255)} # assigning 0 with Female rectangle & 1 with Male rectangle\n",
+    "    age_dict ={0: '10-22', 1:'23-26', 2:'27-31', 3:'32-39', 4:'40-51', 5:'52-99'} # assigning the age groups as classes\n",
     "\n",
-    "    faces, confidences = cv.detect_face(img) \n",
+    "    faces, confidences = cv.detect_face(img) # obtaining the face coordinates\n",
     "    for index,face in enumerate(faces):\n",
-    "        x1,y1 = face[0],face[1]\n",
+    "        x1,y1 = face[0],face[1]  \n",
     "        x2,y2 = face[2],face[3]\n",
     "        image = img[y1-20:y2+20,x1-20:x2+20]\n",
-    "        image_gry = cv2.cvtColor(image,cv2.COLOR_BGR2GRAY)\n",
-    "        resize_img = cv2.resize(image_gry,(200,200))\n",
-    "        norm_img = resize_img/255.0\n",
+    "        image_gry = cv2.cvtColor(image,cv2.COLOR_BGR2GRAY) # converting images to gray scale\n",
+    "        resize_img = cv2.resize(image_gry,(200,200)) # resizing cropped image to shape 200,200\n",
+    "        norm_img = resize_img/255.0 #normalising the image\n",
     "        reshaped=np.reshape(norm_img,(1,200,200,1))\n",
     "        #reshaped = np.vstack([reshaped])\n",
     "        \n",
@@ -154,8 +154,9 @@
     "        else:\n",
     "            label=1\n",
     "\n",
-    "        cv2.rectangle(img,(x1,y1),(x2,y2),color_dict[label],thickness = 5)\n",
+    "        cv2.rectangle(img,(x1,y1),(x2,y2),color_dict[label],thickness = 5) # drawing a rectangle on face based on gender predicted\n",
     "        # cv2.rectangle(img,(x2,y2),(x2,y2),color_dict[label],-1)\n",
+    "        # putting the text on top of image\n",
     "        cv2.putText(img, label_dict[label]+ ', '+ age_dict[np.argmax(age_result)], (x1, y1+15),cv2.FONT_HERSHEY_SIMPLEX,1,(255,255,255),4)\n",
     "    return img\n",
     "        "
@@ -184,9 +185,9 @@
    },
    "outputs": [],
    "source": [
-    "width = int(video.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
-    "height = int(video.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
-    "out = cv2.VideoWriter('test5_out.mp4',cv2.VideoWriter_fourcc(*'XVID'),25,(width,height))"
+    "width = int(video.get(cv2.CAP_PROP_FRAME_WIDTH)) # width of each frame we needed in the output\n",
+    "height = int(video.get(cv2.CAP_PROP_FRAME_HEIGHT)) # height of each fram we need in output\n",
+    "out = cv2.VideoWriter('test5_out.mp4',cv2.VideoWriter_fourcc(*'XVID'),25,(width,height)) # creating an output file and writing the predicted frames to it"
    ]
   },
   {
@@ -212,7 +213,7 @@
     "if video.isOpened() == False:\n",
     "  print('Error! File Not found')\n",
     "while video.isOpened():\n",
-    "    ret,frame = video.read()\n",
+    "    ret,frame = video.read() # reading each frame in the video\n",
     "    if ret == True:\n",
     "        frame = detect_face_video(frame)  #detect the face for each frame displayed on video\n",
     "        out.write(frame)\n",
@@ -229,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## For image"
+    "## For image input"
    ]
   },
   {
@@ -239,33 +240,33 @@
    "outputs": [],
    "source": [
     "def detect_face_image(img):\n",
-    "    label_dict={0:'Female',1:'Male'}\n",
-    "    color_dict={0:(0,255,0),1:(0,0,255)}\n",
-    "    age_dict ={0: '10-22', 1:'23-26', 2:'27-31', 3:'32-39', 4:'40-51', 5:'52-99'}\n",
+    "    label_dict={0:'Female',1:'Male'} # assigning 0 with female & 1 with Male\n",
+    "    color_dict={0:(0,255,0),1:(0,0,255)} # assigning 0 with Female rectangle & 1 with Male rectangle\n",
+    "    age_dict ={0: '10-22', 1:'23-26', 2:'27-31', 3:'32-39', 4:'40-51', 5:'52-99'} # assigning the age groups as classes\n",
     "\n",
-    "    faces, confidences = cv.detect_face(img) \n",
-    "\n",
+    "    faces, confidences = cv.detect_face(img) # obtaining the face coordinates\n",
     "    for index,face in enumerate(faces):\n",
-    "        x1,y1 = face[0],face[1]\n",
+    "        x1,y1 = face[0],face[1]  \n",
     "        x2,y2 = face[2],face[3]\n",
     "        image = img[y1-20:y2+20,x1-20:x2+20]\n",
-    "        image_gry = cv2.cvtColor(image,cv2.COLOR_BGR2GRAY)\n",
-    "        resize_img = cv2.resize(image_gry,(200,200))\n",
-    "        norm_img = resize_img/255.0\n",
+    "        image_gry = cv2.cvtColor(image,cv2.COLOR_BGR2GRAY) # converting images to gray scale\n",
+    "        resize_img = cv2.resize(image_gry,(200,200)) # resizing cropped image to shape 200,200\n",
+    "        norm_img = resize_img/255.0 #normalising the image\n",
     "        reshaped=np.reshape(norm_img,(1,200,200,1))\n",
     "        #reshaped = np.vstack([reshaped])\n",
     "        \n",
-    "        gender_res = gen_model.predict(reshaped)\n",
-    "        age_result = age_model.predict(reshaped)\n",
+    "        gender_res = gen_model.predict(reshaped) # gender prediction\n",
+    "        age_result = age_model.predict(reshaped) # age prediction\n",
     "\n",
     "        if(gender_res[0][0]<0.5):\n",
     "            label=0\n",
     "        else:\n",
     "            label=1\n",
     "\n",
-    "        cv2.rectangle(img,(x1,y1),(x2,y2),color_dict[label],thickness = 5)\n",
+    "        cv2.rectangle(img,(x1,y1),(x2,y2),color_dict[label],thickness = 5) # drawing a rectangle on face based on gender predicted\n",
     "        # cv2.rectangle(img,(x2,y2),(x2,y2),color_dict[label],-1)\n",
-    "        cv2.putText(img, label_dict[label]+ ', '+ age_dict[np.argmax(age_result)], (x1, y1+15),cv2.FONT_HERSHEY_SIMPLEX,1,(255,255,255),3)\n",
+    "        # putting the text on top of image\n",
+    "        cv2.putText(img, label_dict[label]+ ', '+ age_dict[np.argmax(age_result)], (x1, y1+15),cv2.FONT_HERSHEY_SIMPLEX,1,(255,255,255),4)\n",
     "    return img\n",
     "        "
    ]
@@ -276,9 +277,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = cv2.imread(\"temp1.JPG\")\n",
-    "out_image = detect_face_image(image)\n",
-    "plt.imshow(out_image)"
+    "image = cv2.imread(\"temp1.JPG\") #reading the image we need to predict\n",
+    "out_image = detect_face_image(image) # detecting the gender and age\n",
+    "plt.imshow(out_image) # plotting the image"
    ]
   },
   {
@@ -298,7 +299,7 @@
    },
    "outputs": [],
    "source": [
-    "webcam = cv2.VideoCapture(0)\n",
+    "webcam = cv2.VideoCapture(0) \n",
     "while True:\n",
     "    ret,frame = webcam.read()\n",
     "    frame = detect_face_video(frame)  #detect the face for each frame displayed on video\n",
